# articulating-learned-rules

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  research_log.md  research_log2.md
data/datasets_compositionality/: comp_pair01_AND.jsonl  comp_pair01_OR.jsonl  comp_pair02_AND.jsonl  comp_pair02_OR.jsonl  comp_pair03_AND.jsonl  comp_pair03_OR.jsonl  comp_pair04_AND.jsonl  comp_pair04_OR.jsonl  comp_pair05_AND.jsonl  (+1 more)
paper/: CORRECTIONS_SUMMARY.md  LINGUISTIC_FEATURES_ADDITION.tex  README.md  main.aux  main.out  main.tex  neurips_2025.sty
specs/: RESEARCH_SPEC.md  RULES_REFERENCE.md  THOUGHTS.md  WRITING.md
src/: README.md  __init__.py  analyze.py  analyze_articulation_freeform.py  analyze_faithfulness_length.py  analyze_learnability.py  analyze_linguistic_faithfulness.py  api_caller.py  augment_datasets.py  brainstorm_rules.py  create_articulation_freeform_visualizations.py  create_articulation_functional_visualizations.py  create_articulation_multishot_visualizations.py  create_articulation_visualizations.py  create_composite_rules.py  create_faithfulness_visualizations.py  create_learnability_visualizations.py  create_research_analysis_visualizations.py  create_visualizations.py  curate_rules.py  data_models.py  embedding_cache.py  enrich_rules_with_learnability.py  extract_articulation_features.py  filter_generated_rules.py  generate_composite_datasets.py  generate_datasets.py  model_registry.py  runner.py  test_articulation_freeform.py  test_articulation_mc.py  test_faithfulness.py  test_faithfulness_ood.py  test_learnability.py  utils.py
(+2270 files in other folders)
